--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -4,7 +4,7 @@ html
   head
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta charset="utf-8"
-    meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
+    meta content="width=device-width,user-scalable=no" name="viewport"
     meta name="keywords" content="#{current_page.data.keywords}"
     meta name="description" content="#{current_page.data.description}"
     / Facebook
@@ -26,6 +26,8 @@ html
     / favicon
     link href="/images/favicon.ico" rel="shortcut icon"
     link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
+    link href="//fonts.googleapis.com/css?family=Questrial" rel="stylesheet" type="text/css"
+    link href="//fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css"
     = stylesheet_link_tag :site
     = javascript_include_tag :all
 
