--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -62,6 +62,17 @@ a:visited {
   .index {
     width: 100%;
 
+    .pattern-first {
+      position: absolute;
+      height: 100%;
+      top: 0; // section-firstからの距離感
+      left: 0;
+      background-image: url( "/images/pattern.png" );
+      background-repeat: repeat;
+      background-attachment: scroll;
+      z-index: 10;
+    }
+
     .cover, .box-fix,
     .top-view, .info-view, .news-view, .lineup-view,
     .box-fix, .top-box, .info-box, .news-box, .lineup-box,
@@ -93,11 +104,12 @@ a:visited {
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
+    }
 
-      .top-box {
-        text-align: center;
-        color: #fff;
-      }
+    .top-box {
+      text-align: center;
+      color: #fff;
+      z-index: 20;
     }
 
     .box-fix {
@@ -113,23 +125,13 @@ a:visited {
       text-shadow: 0 1px 1px rgba(0,0,0,.3);
     }
 
-    .pattern-first {
-      position: absolute;
-      height: 100%;
-      top: 0; // section-firstからの距離感
-      left: 0;
-      background-image: url( "/images/pattern.png" );
-      background-repeat: repeat;
-      background-attachment: scroll;
-      z-index: 10;
-    }
-
     .info-view {
       position: absolute;
       height: 710px;
       top: 100%; // section-firstからの距離感
       left: 0;
       background-color: #fff;
+      z-index: 30;
 
       .info-box {
         height: 300px;
@@ -193,6 +195,7 @@ a:visited {
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
+      z-index: 30;
 
       .news-box {
         top: calc( 710px + 100% ); // news-viewのtopを同じ値
@@ -246,11 +249,68 @@ a:visited {
       top: calc( 710px + 680px + 100% ); // info-viewのheight+news-viewのheight+100%
       left: 0;
       background-color: white;
+      z-index: 30;
 
       .lineup-box {
-        height: 200px;
         top: calc( 710px + 680px + 100% ); // lineup-viewのtopを同じ値
         color: black;
+
+        .lineup-inner {
+          display: flex;
+          display: -webkit-flex; // Safari
+          align-items: flex-start;;
+          -webkit-align-items: flex-start; // Safari
+          justify-content: center;
+          -webkit-justify-content: center; // Safari
+          align-content: stretch;
+          -webkit-align-content: stretch; // Safari
+          flex-wrap: wrap;
+          -webkit-flex-wrap: wrap;
+          width: 100%;
+          margin: 0 auto;
+
+          .lineup-card {
+            display: inline-block;
+            margin-left: 8px;
+            margin-right: 8px;
+            //border: 1px solid;
+
+            .lineup-thumbnail {
+              width: 240px;
+              height: 160px;
+              margin: 0, auto;
+              margin-bottom: 20px;
+              line-height: 160px;
+              text-align: center;
+              overflow: hidden;
+              background-color: black;
+
+              img {
+                width: 100%;
+                height: auto;
+                vertical-align: middle;
+
+                &:hover {
+                  transition: 0.6s;
+                  opacity: 0.6;
+                }
+              }
+            }
+
+            .icon-title-top-line {
+              background-color: #f1c40f;
+            }
+
+            .lineup-text {
+              width: 240px;
+
+              h3 {
+                margin-bottom: 20px;
+                font-size: 0.9em;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -392,12 +452,70 @@ a:visited {
     }
 
     .lineup-view {
-      height: 400px;
       background-color: white;
 
       .lineup-box {
-        height: 200px;
         color: black;
+
+        .lineup-inner {
+          display: flex;
+          display: -webkit-flex; // Safari
+          align-items: flex-start;;
+          -webkit-align-items: flex-start; // Safari
+          justify-content: center;
+          -webkit-justify-content: center; // Safari
+          align-content: stretch;
+          -webkit-align-content: stretch; // Safari
+          flex-wrap: wrap;
+          -webkit-flex-wrap: wrap;
+          width: 100%;
+          margin: 0 auto;
+          //margin-bottom: 30px;
+
+          .lineup-card {
+            display: inline-block;
+            width: 150px;
+            margin-left: 4px;
+            margin-right: 4px;
+            text-align: center;
+            //border: 1px solid;
+
+            .lineup-thumbnail {
+              width: 150px;
+              height: 100px;
+              margin: 0, auto;
+              margin-bottom: 20px;
+              line-height: 100px;
+              text-align: center;
+              overflow: hidden;
+              background-color: black;
+
+              img {
+                width: 100%;
+                height: auto;
+                vertical-align: middle;
+
+                &:hover {
+                  transition: 0.6s;
+                  opacity: 0.6;
+                }
+              }
+            }
+
+            .icon-title-top-line {
+              background-color: #f1c40f;
+            }
+
+            .lineup-text {
+              width: 150px;
+
+              h3 {
+                margin-bottom: 20px;
+                font-size: 0.9em;
+              }
+            }
+          }
+        }
       }
     }
   }
