--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -15,6 +15,16 @@ body {
 header {
 }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: #e0e0e0;
+  border-top: 1px solid #9e9e9e;
+  z-index: 40;
+}
+
 h1 {
   margin-bottom: 6px;
   padding-bottom: 0;
@@ -55,6 +65,13 @@ a:visited {
   margin-bottom: 10px;
   background-color: #e74c3c;
 }
+
+.clearfix {
+  margin: 0;
+  padding: 0;
+  clear: both;
+}
+
 
 
 /* PC対応 */
@@ -258,7 +275,7 @@ a:visited {
         .lineup-inner {
           display: flex;
           display: -webkit-flex; // Safari
-          align-items: flex-start;;
+          align-items: flex-start;
           -webkit-align-items: flex-start; // Safari
           justify-content: center;
           -webkit-justify-content: center; // Safari
@@ -314,12 +331,71 @@ a:visited {
       }
     }
   }
+
+  .nav-wrapper {
+    float: left;
+    width: 80%;
+    //border: 1px solid;
+
+    .nav-inner {
+      display: flex;
+      display: -webkit-flex; // Safari
+      align-items: flex-start; // 垂直方向
+      -webkit-align-items: flex-start; // Safari
+      justify-content: flex-start; // 水平方向
+      -webkit-justify-content: flex-start; // Safari
+      align-content: stretch;
+      -webkit-align-content: stretch; // Safari
+      width: 100%;
+      height: 64px;
+      margin-top: 3px;
+      margin-left: 20px;
+      text-align: center;
+
+      .nav-card {
+        width: 70px;
+        margin-right: 30px;
+        //border: 1px solid;
+        opacity: 0.6;
+
+        .nav-icon {
+          img {
+            width: 44px;
+            height: 44px;
+            margin: 0, auto;
+          }
+        }
+
+        .nav-name {
+          font-size: 0.8em;
+        }
+      }
+    }
+
+  }
+
+  .scroll-to-top {
+    float: right;
+    margin-right: 20px;
+    opacity: 0.6;
+
+    img {
+      width: 50px;
+      height: 50px;
+      margin-top: 10px;
+    }
+  }
 }
 
 
 
 /* スマホ・タブレット対応 */
 @media screen and ( max-width: 768px ) {
+  footer {
+    height: 56px;
+
+  }
+
   h3 {
     font-size: 0.9em;
   }
@@ -516,6 +592,60 @@ a:visited {
             }
           }
         }
+      }
+    }
+
+    .nav-wrapper {
+      float: left;
+      width: 80%;
+      //border: 1px solid;
+
+      .nav-inner {
+        display: flex;
+        display: -webkit-flex; // Safari
+        align-items: flex-start; // 垂直方向
+        -webkit-align-items: flex-start; // Safari
+        justify-content: flex-start; // 水平方向
+        -webkit-justify-content: flex-start; // Safari
+        align-content: stretch;
+        -webkit-align-content: stretch; // Safari
+        width: 100%;
+        height: 64px;
+        margin-top: 4px;
+        margin-left: 6px;
+        text-align: center;
+
+        .nav-card {
+          width: 50px;
+          margin-right: 4px;
+          //border: 1px solid;
+          opacity: 0.6;
+
+          .nav-icon {
+            img {
+              width: 30px;
+              height: 30px;
+              margin: 0, auto;
+            }
+          }
+
+          .nav-name {
+            font-size: 0.6em;
+          }
+        }
+      }
+
+    }
+
+    .scroll-to-top {
+      float: right;
+      margin-right: 10px;
+      opacity: 0.6;
+
+      img {
+        width: 34px;
+        height: 34px;
+        margin-top: 11px;
       }
     }
   }
