--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -96,7 +96,7 @@ main.index
         .news-title
           = link_to 'テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト', 'http://coconofest.hateblo.jp/', :target => '_blank'
       .news-read-more
-        = link_to 'Read More >>', 'http://coconofest.hateblo.jp/', :target => '_blank'
+        = link_to 'Read More', 'http://coconofest.hateblo.jp/', :target => '_blank'
   /.pattern-third
   article.lineup-view#lineup
     section.lineup-box
