--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -66,6 +66,10 @@ a:visited {
   background-color: #e74c3c;
 }
 
+.position-initial {
+  position: relative;
+}
+
 .clearfix {
   margin: 0;
   padding: 0;
@@ -91,8 +95,8 @@ a:visited {
     }
 
     .cover, .box-fix,
-    .top-view, .info-view, .news-view, .lineup-view,
-    .box-fix, .top-box, .info-box, .news-box, .lineup-box,
+    .top-view, .info-view, .news-view, .lineup-view, .contact-view, .gallery-view,
+    .box-fix, .top-box, .info-box, .news-box, .lineup-box, .contact-box, .gallery-box,
     .pattern-first, .pattern-third {
       width: 100%;
       //border: 1px solid black;
@@ -276,7 +280,7 @@ a:visited {
 
     .lineup-view {
       position: absolute;
-      height: 400px;
+      height: 800px;
       top: calc( 710px + 680px + 100% ); // info-viewのheight+news-viewのheight+100%
       left: 0;
       background-color: white;
@@ -339,6 +343,115 @@ a:visited {
                 margin-bottom: 20px;
                 font-size: 0.9em;
               }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .contact-view {
+    position: absolute;
+    height: 460px;
+    top: calc( 710px + 680px + 800px + 100% ); // info-viewのheight+news-viewのheight+lineup-viewのheight+100%
+    left: 0;
+    background-color: #eee;
+    z-index: 30;
+
+    .contact-box {
+      top: calc( 710px + 680px + 800px + 100% ); // gallery-viewのtopを同じ値
+      text-align: center;
+      color: black;
+
+      .contact-inner {
+        display: flex;
+        display: -webkit-flex; // Safari
+        align-items: center;
+        -webkit-align-items: center; // Safari
+        justify-content: center;
+        -webkit-justify-content: center; // Safari
+        align-content: stretch;
+        -webkit-align-content: stretch; // Safari
+        flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 40px;
+
+        img {
+          display: inline-block;
+          width: 100px;
+          height: 100px;
+          margin-left: 20px;
+          margin-right: 20px;
+
+          &:hover {
+            transition: 0.6s;
+            opacity: 0.6;
+          }
+        }
+      }
+    }
+  }
+
+  .gallery-view {
+    position: absolute;
+    min-height: 100%;
+    top: calc( 710px + 680px + 800px + 460px + 100% ); // info-viewのheight+news-viewのheight+lineup-viewのheight+100%
+    left: 0;
+    background-color: black;
+    z-index: 30;
+
+    .gallery-box {
+      top: calc( 710px + 680px + 800px + 460px + 100% ); // gallery-viewのtopを同じ値
+      text-align: center;
+      color: white;
+
+      .gallery-inner {
+        width: 100%;
+        margin: 0 auto;
+
+        #instafeed {
+          width: 88%;
+          margin: 0 auto;
+          text-align: center;
+
+          li {
+            display: inline-block;
+            width: 17%;
+            margin-top: 8px;
+            margin-left: 8px;
+            margin-right: 8px;
+
+            img {
+              width: 100%;
+            }
+          }
+        }
+
+        #load-more {
+          width: 230px;
+          height: 50px;
+          margin: 0 auto;
+          margin-top: 40px;
+          margin-bottom: 100px;
+          text-align: center;
+          font-size: 1.1em;
+          font-weight: 300;
+          color: white;
+          border: 1px solid white;
+          background-color: inherit;
+
+          a {
+            display: inline-block;
+            width: 100%;
+            height: calc( 100% - 14px );
+            padding-top: 14px;
+            text-decoration: none;
+
+            &:link,
+            &:visited {
+              color: white;
             }
           }
         }
@@ -416,8 +529,8 @@ a:visited {
 
   .index {
     .cover, .box-fix,
-    .top-view, .info-view, .news-view, .lineup-view,
-    .box-fix, .top-box, .info-box, .news-box, .lineup-box,
+    .top-view, .info-view, .news-view, .lineup-view, .contact-view, .gallery-view,
+    .box-fix, .top-box, .info-box, .news-box, .lineup-box, .contact-box, .gallery-box,
     .pattern-first, .pattern-third {
       width: 100%;
       //border: 1px solid black;
@@ -615,6 +728,109 @@ a:visited {
               h3 {
                 margin-bottom: 20px;
                 font-size: 0.8em;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .contact-view {
+      padding-bottom: 40px;
+      background-color: #eee;
+      border: transparent 1px solid ;
+
+      .contact-box {
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        color: black;
+        //border: 1px solid;
+
+        .contact-inner {
+          display: flex;
+          display: -webkit-flex; // Safari
+          align-items: center;
+          -webkit-align-items: center; // Safari
+          justify-content: center;
+          -webkit-justify-content: center; // Safari
+          align-content: stretch;
+          -webkit-align-content: stretch; // Safari
+          flex-wrap: wrap;
+          -webkit-flex-wrap: wrap;
+          width: 100%;
+          margin: 0 auto;
+          margin-bottom: 40px;
+          font-size: 0.7em;
+
+          img {
+            display: inline-block;
+            width: 60px;
+            height: 60px;
+            margin-left: 10px;
+            margin-right: 10px;
+
+            &:hover {
+              transition: 0.6s;
+              opacity: 0.6;
+            }
+          }
+        }
+      }
+    }
+
+    .gallery-view {
+      background-color: black;
+      border: transparent 1px solid ;
+
+      .gallery-box {
+        text-align: center;
+        color: white;
+
+        .gallery-inner {
+          width: 100%;
+          margin: 0 auto;
+
+          #instafeed {
+            width: 88%;
+            margin: 0 auto;
+            text-align: center;
+
+            li {
+              display: inline-block;
+              width: 40%;
+              margin-top: 8px;
+              margin-left: 8px;
+              margin-right: 8px;
+
+              img {
+                width: 100%;
+              }
+            }
+          }
+
+          #load-more {
+            width: 200px;
+            height: 48px;
+            margin: 0 auto;
+            margin-top: 20px;
+            margin-bottom: 80px;
+            text-align: center;
+            font-weight: 300;
+            color: white;
+            border: 1px solid white;
+            background-color: inherit;
+
+            a {
+              display: inline-block;
+              width: 100%;
+              height: calc( 100% - 14px );
+              padding-top: 14px;
+              text-decoration: none;
+
+              &:link,
+              &:visited {
+                color: white;
               }
             }
           }
