--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -70,6 +70,14 @@ a:visited {
   position: relative;
 }
 
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .clearfix {
   margin: 0;
   padding: 0;
@@ -266,7 +274,7 @@ a:visited {
         }
       }
     }
-    
+
     .lineup-view {
       position: absolute;
       height: 800px;
