スクロールしない問題を修正

--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -70,6 +70,7 @@ a:visited {
   position: relative;
 }
 
+// スマホの右余白を消す設定
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -90,7 +91,7 @@ a:visited {
 @media screen and ( min-width: 769px ) {
   .index {
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 
     .pattern-first {
       position: absolute;
@@ -319,8 +320,13 @@ a:visited {
               background-color: black;
 
               img {
+                /*
                 width: 100%;
                 height: auto;
+                */
+                width: 240px;
+                height: 160px;
+                object-fit: cover; // IE,Edge未対応
                 vertical-align: middle;
 
                 &:hover {
@@ -527,7 +533,7 @@ a:visited {
 
   .index {
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden; // スマホの右余白を消す設定
 
     .pattern-first {
       position: absolute;
@@ -720,8 +726,13 @@ a:visited {
               background-color: black;
 
               img {
+                /*
                 width: 100%;
                 height: auto;
+                */
+                width: 150px;
+                height: 100px;
+                object-fit: cover; // IE,Edge未対応
                 vertical-align: middle;
 
                 &:hover {
