--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -104,7 +104,7 @@ main.index
       .lineup-inner
         .lineup-card
           .lineup-thumbnail
-            = link_to "#{image_tag '/images/lineup', :alt => ''}", ''
+            = link_to "#{image_tag '/images/lineup/', :alt => ''}", ''
           .lineup-text
             .icon-title-top-line
             h3 出演者1出演者1出演者1出演者1
